# Code-Practice

./: README.md  temp.cpp
30-day-prep/: prep.txt
30-day-prep/day-1/: find-duplicate.cpp  max-subarr.cpp  merge-intervals.cpp  merge-sorted-arr.cpp  missing-number.cpp  sort-colors.cpp
30-day-prep/day-2/: next-permutation.cpp  pascals-triangle.cpp  set-matrix-0s.cpp
Assignments/: firstUnique.cpp  mergeArray.cpp  multiplyArray.cpp  rearrange.cpp  rotate.cpp  secondMax.cpp  sumPair.cpp
Assignments/Arrays/: findMin.cpp  maxMin.cpp  removeEven.cpp  sumPair.cpp
Being-Zero/: BrushUp-Learnings.txt  temp.cpp  template.cpp
Bit-Magic/: isSet.cpp
CP/Arrays/: company.cpp  (+5 more)
First50/: add.cpp  evenOdd.cpp  evenOdd2.cpp  generateprime.cpp  isPrime.cpp
Graphs/: adjlist.cpp  bfs1.cpp  bfs2.cpp  dfs.cpp  dfs2.cpp
Hashing/: chaining.cpp  intersection.cpp  longestsubarr.cpp  sum0.cpp  sumSubarr.cpp  sumpair.cpp  union.cpp
Linked Lists/: deleteB.cpp  display.cpp  dsa1.cpp  findMiddle.cpp  insertM.cpp  sortedInsert.cpp
Queue/: queueSTL.cpp  usingArray.cpp  usingArray2.cpp  usingCLL.cpp  usingSLL.cpp
Sorting/: bubblesort.cpp  countsort.cpp  hoares.cpp  insertionsort.cpp  lomuto.cpp  mergesort.cpp  mergetwoarrays.cpp  partition.cpp  quicksort.cpp  selectionsort.cpp  sortstl.cpp
Stacks/: 2stacksin1.cpp  balancing.cpp  evalPostfix.cpp  nge.cpp  pge.cpp  usingLL.cpp  usingSTL.cpp  usingarray.cpp
Testing/: CMakeLists.txt  mytests.cpp
Trees/: BST.cpp  heap.cpp  heap2.cpp  height.cpp  levelordertraversal.cpp  max.cpp  search.cpp  size.cpp  traversals.cpp
Trie/: trie.cpp
(+205 files in other folders)
